Fix input contrast

--- a/assets/scss/6-pages/_index.scss
+++ b/assets/scss/6-pages/_index.scss
@@ -244,6 +244,9 @@ section#expect {
 
     > input[type=text] {
         background-color: rgba($gray-50, 0.25);
+    }
+
+    ::placeholder {
         color: $gray-100;
     }
 
